2010-09-30  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/users/*.php: Removed reference to gperfiles sec.

	* godmode/profiles/: Deleted no more used folder.

2010-09-30  Raúl Mateos <raulofpandora@gmail.com>

	* operation/menu.php: Changed sound_events.php page size.

	* operation/events/sound_events.php: Added some missing HTML tags.
	Added style.

2010-09-30  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Fixed SQL errors in
	alerts view with not administrator users for bug: 3078113

2010-09-29  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_groups.php: added first version of file with the
	function "checkUsedGroup".
	
	*include/Image/Canvas.php, include/Image/Canvas/GD.php,
	include/functions.php, mobile/operation/agents/view_agents.php: cleaned
	source code style.

	* godmode/groups/group_list.php: fixed the check if the group to delete is
	empty.
	
	Fixes: #3074223

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php
	operation/messages/message.php: Fixed the ACLs 
	to show only the user group users in the destination
	users combo for bug: 3077857

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_copy_modules.php: Fixed the
	massive modules copy for bug 3078010

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed the
	ugly layout of the alerts list in godmode section
	for bug 3077999 

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* operation/visual_console/render_view.php: Fixed the
	missing full screen tab in the visual console section
	for bug: 3078003

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/tactical.php: Hide the server
	and global data in the tactical view to not
	administrator users

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	*  operation/agentes/tactical.php: Allowed to show
	in process events in tactical view
